# scr-service

./: Dockerfile  README.md  app.py  notebook.ipynb  pyproject.toml  requirements.txt  sample_response.json
tests/: test_src.py
