[tool.poetry]
name = "scr-service"
version = "0.1.0"
description = "Um API service simplificado para consulta ao Sistema de Informacoes de Creditos"
authors = ["Ettore Aquino <ettore@ettoreaquino.com>"]
license = "MIT"
readme = "README.rst"
keywords = ["SCR",
            "Credit",
            "Docker",
            "Falcon",
            "API"]

[tool.poetry.dependencies]
python = "^3.7"
falcon = "^2.0.0"
gunicorn = "^20.0.4"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
jupyterlab = "^2.2.4"
pandas = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
